# wls-vst3-rust-skeleton

./: Cargo.toml  README.md
sample_plugin/: Cargo.toml
sample_plugin/src/: lib.rs  main.rs
sample_plugin/src/dsp/: mod.rs  parameters.rs  processor.rs
sample_plugin/src/gui/: editor.rs  mod.rs
sample_plugin/src/plugin/: gain.rs  metadata.rs  mod.rs
xtask/: Cargo.toml
